// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCheckbox should render as disabled when required and disabled 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--disabled"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={true}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with a small label 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label bpk-checkbox__label--small"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with checked attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={true}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with disabled attribute 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--disabled"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={true}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with id attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={false}
    id="checkbox"
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with indeterminate attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input bpk-checkbox__input-indeterminate"
    data-indeterminate={true}
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with indeterminate state when both checked and indeterminate attributes 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={true}
    className="bpk-checkbox__input bpk-checkbox__input-indeterminate"
    data-indeterminate={true}
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with required attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
    <span
      className="bpk-checkbox__asterisk"
    >
      *
    </span>
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with valid=false attribute 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--invalid"
>
  <input
    aria-invalid={true}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with value attribute 1`] = `
<label
  className="bpk-checkbox"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input"
    data-indeterminate={false}
    disabled={false}
    name="checkbox"
    type="checkbox"
    value="my-value"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;

exports[`BpkCheckbox should render correctly with white attribute 1`] = `
<label
  className="bpk-checkbox bpk-checkbox--white"
>
  <input
    aria-invalid={false}
    aria-label="Prefer directs"
    checked={false}
    className="bpk-checkbox__input bpk-checkbox__input-white"
    data-indeterminate={false}
    disabled={false}
    name="checkbox"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="bpk-checkbox__label"
  >
    Prefer directs
  </span>
</label>
`;
